--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Arusha, Kilimanjaro,
                         Tanzania</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 784 554 555</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+255 796 440 555</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                         <div class="col-md-6">
                             <h4 class="mb-3">Tanzania</h4>
                             <p class="mb-1"><strong>Address:</strong> Arusha, Kilimanjaro, Tanzania</p>
-                            <p class="mb-1"><strong>Telephone:</strong> +255 715 636 967</p>
+                            <p class="mb-1"><strong>Telephone:</strong> +255 796 440 555</p>
                             <p class="mb-1"><strong>Email:</strong> info@Kilimorasafaris.com</p>
                         </div>
 
@@ -385,7 +385,7 @@
                         <div class="col-md-12">
                             <h4 class="mb-3">Sustainability & Feedback</h4>
                             <p class="mb-2">For questions about our sustainability practices or feedback:</p>
-                            <p class="mb-1"><strong>Mobile/WhatsApp:</strong> +255 715 636 967 (EAT)</p>
+                            <p class="mb-1"><strong>Mobile/WhatsApp:</strong> +255 796 440 555</p>
                             <p class="mb-1"><strong>Email:</strong> sustainability@Kilimorasafaris.com</p>
                         </div>
 
@@ -393,9 +393,9 @@
                         <div class="col-md-12">
                             <h4 class="mb-3">Traveler Assistance</h4>
                             <p class="mb-1">For support with existing inquiries or bookings:</p>
-                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 715 636 967 (EAT)</p>
-                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+256 767 828 384 (EAT)</p>
-                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 753 090 908 (PHT)</p>
+                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 796 440 555</p>
+                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 762 008 009</p>
+                            <p class="mb-1"><i class="fa fa-phone-alt me-2 text-primary"></i>+255 717 647 994</p>
                             <p class="mb-1"><i class="fa fa-envelope me-2 text-primary"></i>info@Kilimorasafaris.com</p>
                         </div>
 
