--- a/tour-luxury.html
+++ b/tour-luxury.html
@@ -490,7 +490,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="package-item">
                         <div class="overflow-hidden dest-img-container">
-                            <img class="img-fluid" src="img/se.jpg" alt="">
+                            <img class="img-fluid" src="img/Zebra-1.jpg" alt="Zebra Safari">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-0">5 Days Tanzania Mid-range Safari</h5>
@@ -532,7 +532,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="package-item">
                         <div class="overflow-hidden dest-img-container">
-                            <img class="img-fluid" src="img/t3.jpg" alt="">
+                            <img class="img-fluid" src="img/chui.jpg" alt="Cheetah Safari">
                         </div>
                         <div class="p-4">
                             <h5 class="mb-0">7 Days Tanzania Migration Safari</h5>
