most popular photo and name tarangile to tarangire

--- a/index.html
+++ b/index.html
@@ -1227,16 +1227,16 @@
                 <!-- TANZANIA MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/tembo10.jpeg" class="tour-img" alt="Kilimora Safari Tour">
+                        <img src="img/tarangire.png" class="tour-img" alt="Kilimora Safari Tour">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Tarangile</span>
+                            <span>📍 Tarangire National Park</span>
                         </div>
 
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Tarangile Safari</h5>
+                            <h5>10 Days Exclusive Tarangire Safari</h5>
                             <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
                             <div class="arrow-link">→</div>
                         </div>
@@ -1245,11 +1245,11 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/chui9.jpg" class="tour-img" alt="Wildebeest River Crossing">
+                        <img src="img/tembo11.jpeg" class="tour-img" alt="Wildebeest River Crossing">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Wildlife Safaris</span>
+                            <span>📍 Manyara National Park</span>
                         </div>
 
                         <div class="tour-content">
@@ -1263,11 +1263,11 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="Kilimora Safari Tour">
+                        <img src="img/serengeti.png" class="tour-img" alt="Kilimora Safari Tour">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
-                            <span>📍 Luxury</span>
+                            <span>📍 SERENGETI NATIONAL PARK</span>
                         </div>
 
                         <div class="tour-content">
@@ -1287,7 +1287,7 @@
                         <img src="img/tembo5.jpg" class="tour-img" alt="">
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
-                            <span>📍 South Africa</span>
+                            <span>📍 Tanzania</span>
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
@@ -1302,7 +1302,7 @@
                         <img src="img/simba.jpg" class="tour-img" alt="">
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
-                            <span>📍 South Africa</span>
+                            <span>📍 Tanzania</span>
                         </div>
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
@@ -1331,7 +1331,7 @@
                 <!-- GREAT MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item great-migration">
                     <div class="tour-card">
-                        <img src="img/nyumbu.jpg" class="tour-img" alt="Wildebeest River Crossing">
+                        <img src="img/tarangire.png" class="tour-img" alt="Wildebeest River Crossing">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
@@ -1340,8 +1340,8 @@
 
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Serengeti Safari</h5>
-                            <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
+                            <h5>10 Days Exclusive Tarangire Safari</h5>
+                            <p class="tour-tag">🏁 Tarangire</p>
                             <div class="arrow-link">→</div>
                         </div>
                     </div>
@@ -1349,7 +1349,7 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item great-migration">
                     <div class="tour-card">
-                        <img src="img/t2.jpg" class="tour-img" alt="Safari Plane">
+                        <img src="img/lion-eeat-meet.jpeg" class="tour-img" alt="Safari Plane">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 10 Days</span>
@@ -1359,7 +1359,7 @@
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
                             <h5>Serengeti Migration Safari Fly-In</h5>
-                            <p class="tour-tag">🏁 SERENGETI, NGORONGORO, MANYARA</p>
+                            <p class="tour-tag">🏁 SERENGETI</p>
                             <div class="arrow-link">→</div>
                         </div>
                     </div>
@@ -1367,7 +1367,7 @@
 
                 <div class="col-lg-4 col-md-6 tour-card-item great-migration">
                     <div class="tour-card">
-                        <img src="img/chui9.jpg" class="tour-img" alt="Calving">
+                        <img src="img/Lion-Ncaa.jpg" class="tour-img" alt="Calving">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 5 Days</span>
@@ -1377,7 +1377,7 @@
                         <div class="tour-content">
                             <div class="rating">★★★★★</div>
                             <h5>5 Days Wildebeest Calving Safari</h5>
-                            <p class="tour-tag">🏁 NDUTU, SERENGETI</p>
+                            <p class="tour-tag">🏁 Ngorongoro</p>
                             <div class="arrow-link">→</div>
                         </div>
                     </div>
@@ -1460,7 +1460,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item kilimanjaro">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/kilimanjaro.png" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -1478,7 +1478,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 tour-card-item kilimanjaro">
                     <div class="tour-card">
-                        <img src="img/tarangire.jpg" class="tour-img" alt="">
+                        <img src="img/getting-to-kilimanjaro-7.jpg" class="tour-img" alt="">
                         <br><br>
                         <div class="tour-tag-box">
                             <span>📅 8 Days</span>
@@ -2202,7 +2202,8 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/gladyprofile.jpeg" alt="Kilimora Safari">
+                            <!-- <img class="img-fluid" src="img/gladyprofile.jpeg" alt="Kilimora Safari"> -->
+                            <img class="img-fluid" src="img/benson.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1"
@@ -2214,7 +2215,7 @@
                                     class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Glady Mushi</h5>
+                            <h5 class="mb-0">Benson Moshi</h5>
                             <small> Director</small>
                             <div class="mt-3">
                                 <a href="about.html#glady-profile" class="team-read-more">Read More &rarr;</a>
@@ -2226,7 +2227,7 @@
                     <div class="team-item">
                         <div class="overflow-hidden">
 
-                            <img class="img-fluid" src="img/gladyprofile.jpeg" alt="Kilimora Safari">
+                            <img class="img-fluid" src="img/diana-profile.jpg" alt="Kilimora Safari">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1"
@@ -2238,7 +2239,7 @@
                                     class="fab fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Glady Mushi</h5>
+                            <h5 class="mb-0">Diana</h5>
                             <small> Director</small>
                             <div class="mt-3">
                                 <a href="about.html#glady-profile" class="team-read-more">Read More &rarr;</a>
