Save local changes about us

--- a/about.html
+++ b/about.html
@@ -327,17 +327,25 @@
                     <h5 class="mb-3" style="color: #4B2E18;">Where Passion Meets the Wild</h5>
 
                     <p class="mb-4">
-                        Kilimora Adventure is an emerging premier tour operator based in the heart of Arusha, Tanzania.
-                        Founded in 2025, our story is rooted in a deep love for the African wilderness and a commitment
-                        to authentic exploration.
+                        Kilimora Adventure was founded by Franklin E. Moshi and Diana T. Mungure, built on a strong foundation of complementary expertise and professional excellence.
+                        <br>
+                        <b>Franklin E. Moshi </b> brings over five years of hands-on operational experience as a seasoned tour guide and driver, ensuring that every journey is executed 
+                        with precision, safety, and attention to detail. His in-depth knowledge of destinations and logistics guarantees seamless travel experiences for every client.
+                        <br>
+                        <b>Diana T Mungure</b> contributes more than a decade of high-level experience managing U.S.-funded projects, delivering exceptional organizational 
+                        leadership and adherence to international standards. Her background brings world-class structure, accountability, and professionalism 
+                        to the tourism industry.
+                        <br><br>
+                        Together, they have established Kilimora Adventure with a shared vision: to transform ordinary travel into immersive, meaningful, 
+                        and life-changing experiences.
                     </p>
                     <p class="mb-4">
-                        The company was born from the combined vision of two dedicated founders: <strong>Franklin E.
-                            Moshi</strong>, a veteran tour guide and driver with more than 5 years of
-                        "boots-on-the-ground" experience, and <strong>Sarah Thomas</strong>, who left a career
-                        in non-funded projects under USAID & CDC where she served for more than 10 years, to follow her
-                        true calling in tourism. Together, they turned their shared passion into a mission: to provide
-                        guests with more than just a tour, but a life-changing journey.
+                        Kilimora Adventure exists to redefine travel through authenticity, cultural connection, and exceptional service. 
+                        We craft carefully curated expeditions that inspire discovery, personal growth, and lasting memories. Every itinerary reflects our 
+                        unwavering commitment to quality, integrity, and unforgettable exploration.
+
+                        With <strong>Franklin’s</strong> field expertise and <strong>Diana’s </strong> strategic leadership, we deliver seamless, professionally executed 
+                        journeys designed to exceed expectations.
                     </p>
 
                     <h5 class="mb-3" style="color: #4B2E18;">Why Journey With Us?</h5>
@@ -369,7 +377,7 @@
                     </p>
 
                     <a href="#" class="view-tours-link">
-                        <span class="arrow">â†’</span> READ MORE
+                        <span class="arrow">&#8594;</span> READ MORE
                     </a>
                     <div class="view-tours-underline"></div>
                 </div>
