Save local changes about us

--- a/about.html
+++ b/about.html
@@ -321,7 +321,7 @@
                             alt="" style="object-fit: cover;">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About Us</h6>
                     <h1 class="mb-4"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
                     <h5 class="mb-3" style="color: #4B2E18;">Where Passion Meets the Wild</h5>
@@ -380,10 +380,147 @@
                         <span class="arrow">&#8594;</span> READ MORE
                     </a>
                     <div class="view-tours-underline"></div>
-                </div>
+                </div> -->
+
+
+                <div class="col-lg-6 wow fadeInUp about-modern" data-wow-delay="0.3s">
+
+    <h6 class="section-title bg-white text-start pe-3" style="color:#4B2E18 !important;">About </h6>
+
+    <h1 class="main-title"><span style="color: #4B2E18 !important;">About Kilimora Adventure</span></h1>
+
+    <h4 class="tagline">Where Passion Meets the Wild</h4>
+
+    <div class="about-content">
+
+        <p>
+            Kilimora Adventure was founded by <strong>Franklin E. Moshi</strong> and 
+            <strong>Diana T. Mungure</strong>, built on a strong foundation of 
+            complementary expertise and professional excellence.
+        </p>
+
+        <p>
+            <strong>Franklin E. Moshi</strong> brings over five years of hands-on 
+            operational experience as a seasoned tour guide and driver, ensuring 
+            that every journey is executed with precision, safety, and attention 
+            to detail. His in-depth knowledge of destinations and logistics 
+            guarantees seamless travel experiences for every client.
+        <br>
+            <strong>Diana T Mungure</strong> contributes more than a decade of 
+            high-level experience managing U.S.-funded projects, delivering 
+            exceptional organizational leadership and adherence to international 
+            standards. Her background brings world-class structure, accountability, 
+            and professionalism to the tourism industry.
+        </p>
+
+        <p class="highlight-text">
+            Together, they have established Kilimora Adventure with a shared vision: 
+            to transform ordinary travel into immersive, meaningful, and life-changing experiences.
+        </p>
+
+        <p>
+            Kilimora Adventure exists to redefine travel through authenticity, 
+            cultural connection, and exceptional service. We craft carefully curated 
+            expeditions that inspire discovery, personal growth, and lasting memories. 
+            Every itinerary reflects our unwavering commitment to quality, integrity, 
+            and unforgettable exploration.
+        </p>
+
+        <p class="closing-text">
+            With <strong>Franklin’s</strong> field expertise and 
+            <strong>Diana’s</strong> strategic leadership, we deliver seamless, 
+            professionally executed journeys designed to exceed expectations.
+        </p>
+        <p>
+    <a href="#" class="view-tours-link">
+                        <span class="arrow">&#8594;</span> READ MORE
+                    </a>
+                    <div class="view-tours-underline"></div>
+    </div>
+</p>
+</div>
+
+<!-- start css about us style  -->
+<style>
+    .about-modern {
+    padding: 60px 30px;
+    max-width: 650px;
+}
+/* Main Heading */
+.main-title {
+    font-size: 38px;
+    font-weight: 700;
+    color: #2b2b2b;
+    line-height: 1.3;
+    margin-bottom: 10px;
+}
+
+/* Tagline */
+.tagline {
+    font-size: 18px;
+    font-weight: 400;
+    color: #666;
+    font-style: italic;
+    margin-bottom: 35px;
+}
+
+/* Paragraphs */
+.about-content p {
+    font-size: 17px;
+    line-height: 1.9;
+    color: #555;
+    text-align: justify;
+    margin-bottom: 22px;
+    font-weight: 400;
+}
+
+/* Highlight Vision Paragraph */
+.highlight-text {
+    font-size: 18px;
+    font-weight: 500;
+    color: #2b2b2b;
+    background: #f4efe9;
+    padding: 20px;
+    border-left: 4px solid #a67c52;
+    border-radius: 8px;
+}
+
+/* Closing Statement */
+.closing-text {
+    font-size: 18px;
+    font-weight: 500;
+    color: #2b2b2b;
+}
+
+/* Strong Name Styling */
+.about-content strong {
+    color: #4B2E18;
+    font-weight: 600;
+}
+
+/* Smooth fade text effect */
+.about-modern {
+    animation: fadeUp 1s ease-in-out;
+}
+
+@keyframes fadeUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+</style>
+<!-- end about us style  -->
+
             </div>
         </div>
     </div>
+
     <!-- About End -->
 
 
