Save local changes about us

--- a/destination-manyara.html
+++ b/destination-manyara.html
@@ -365,7 +365,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/chui-eat2.jpeg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/lake_manyara1.png" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
