--- a/destination-ngorongoro.html
+++ b/destination-ngorongoro.html
@@ -366,7 +366,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/chui-eat2.jpeg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/simba1.jpg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -375,15 +375,38 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Ngorongoro Crater</h2>
                         </div>
-                        <p class="mb-4">The Ngorongoro Conservation Area constitutes a UNESCO World Heritage Site
-                            located 180 km (110 mi) west of Arusha in the Crater Highlands area of Tanzania. The
-                            conservation area is named after Ngorongoro Crater, a large volcanic caldera within the
-                            area.</p>
-                        <p class="mb-4">The crater, which formed when a large volcano exploded and collapsed on itself
-                            two to three million years ago, is 610 meters (2,000 feet) deep and its floor covers 260
-                            square kilometers (100 square miles). It is home to a dense population of wildlife including
-                            the Big 5.</p>
-                    </div>
+                        <!-- <p class="mb-4">With Kilimora Adventure, visitors are guaranteed a truly unforgettable experience, guided by skilled professionals who bring every 
+                            corner of the landscape to life. From thrilling wildlife encounters and rich birdwatching opportunities to breathtaking panoramic views of one of 
+                            Africa’s most iconic natural wonders, every moment is crafted to inspire awe. At the Ngorongoro Crater, travelers can marvel at a vast caldera 
+                            blanketed in golden grasslands, a sparkling soda lake, and ethereal morning mists that rise at sunrise, creating a magical scene straight from a dream.
+                        </p>
+                        <p class="mb-4">This extraordinary ecosystem teems with wildlife—from elephants, buffaloes, zebras, wildebeest, lions, leopards, cheetahs, hyenas, and 
+                            hippos to the rare black rhinoceros—while the skies and wetlands host flamingos, crowned cranes, ostriches, kori bustards, eagles, and vultures. 
+                            For nature lovers and safari enthusiasts alike, Ngorongoro stands as an unmatched, once-in-a-lifetime destination.</p>
+                    </div> -->
+<p style="text-align: justify; 
+          font-family: Arial, sans-serif; 
+          font-size: 16px; 
+          color: #666666;  /* soft gray */
+          line-height: 1.6; 
+          margin-bottom: 1.2em;">
+    With Kilimora Adventure, visitors are guaranteed a truly unforgettable experience, guided by skilled professionals who bring every 
+    corner of the landscape to life. From thrilling wildlife encounters and rich birdwatching opportunities to breathtaking panoramic views of one of 
+    Africa’s most iconic natural wonders, every moment is crafted to inspire awe. At the Ngorongoro Crater, travelers can marvel at a vast caldera 
+    blanketed in golden grasslands, a sparkling soda lake, and ethereal morning mists that rise at sunrise, creating a magical scene straight from a dream.
+</p>
+
+<p style="text-align: justify; 
+          font-family: Arial, sans-serif; 
+          font-size: 16px; 
+          color: #666666;  /* soft gray */
+          line-height: 1.6; 
+          margin-bottom: 1.2em;">
+    This extraordinary ecosystem teems with wildlife—from elephants, buffaloes, zebras, wildebeest, lions, leopards, cheetahs, hyenas, and 
+    hippos to the rare black rhinoceros—while the skies and wetlands host flamingos, crowned cranes, ostriches, kori bustards, eagles, and vultures. 
+    For nature lovers and safari enthusiasts alike, Ngorongoro stands as an unmatched, once-in-a-lifetime destination.
+</p>
+
                 </div>
             </div>
         </div>
