--- a/destination-terangile.html
+++ b/destination-terangile.html
@@ -365,7 +365,7 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="img-border">
-                        <img class="img-fluid" src="img/chui-eat2.jpeg" alt="Serengeti Map">
+                        <img class="img-fluid" src="img/pundamilia6.jpeg" alt="Serengeti Map">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -374,13 +374,23 @@
                             <span class="section-title-line"></span>
                             <h2 class="mb-0">About Tarangire</h2>
                         </div>
-                        <p class="mb-4">Tarangire National Park is a protected area in Tanzania's Manyara Region. The
-                            name of the park originates from the Tarangire River that crosses the park. The river is the
-                            primary source of fresh water for wild animals in the Tarangire Ecosystem during the annual
-                            dry season.</p>
-                        <p class="mb-4">The park is famous for its high density of elephants and baobab trees. Visitors
-                            to the park in the June to November dry season can expect to see large herds of thousands of
-                            zebra, wildebeest and cape buffalo.</p>
+                        <p style="text-align: justify; 
+          font-family: Arial, sans-serif; 
+          font-size: 16px; 
+          color: rgba(0, 0, 0, 0.6);  /* black with 60% opacity */
+          line-height: 1.6; 
+          margin-bottom: 1.2em;">
+                            With Kilimora Adventure, visitors to Tarangire National Park can expect an authentic and rewarding safari in one of 
+                            Tanzania’s most scenic wildlife destinations.</p>
+                        <p style="text-align: justify; 
+          font-family: Arial, sans-serif; 
+          font-size: 16px; 
+          color: rgba(0, 0, 0, 0.6);  /* black with 60% opacity */
+          line-height: 1.6; 
+          margin-bottom: 1.2em;">
+                            Famous for its vast elephant herds, ancient baobab trees, and the life-sustaining Tarangire River, the park offers incredible sightings 
+                            of lions, leopards, cheetahs, giraffes, zebras, buffaloes, rare species like fringe-eared oryx and gerenuk, as well as over 500 bird species. 
+                            Guided by our experienced professionals, every safari promises exceptional wildlife encounters and unforgettable landscapes.</p>
                     </div>
                 </div>
             </div>
