Save local changes about us

--- a/contact.html
+++ b/contact.html
@@ -370,16 +370,16 @@
 
                         <!-- Kenya -->
                         <div class="col-md-6">
-                            <h4 class="mb-3">Kenya</h4>
-                            <p class="mb-1"><strong>Address:</strong> Nairobi, Kenya</p>
-                            <p class="mb-1"><strong>Email:</strong> magicalkenya@Kilimorasafaris.com</p>
+                            <h4 class="mb-3">Tanzania</h4>
+                            <p class="mb-1"><strong>Address:</strong> Dar Es Salaam, Tanzania</p>
+                            <p class="mb-1"><strong>Email:</strong> @infoKilimorasafaris.com</p>
                         </div>
 
                         <!-- China -->
-                        <div class="col-md-6">
-                            <h4 class="mb-3">China</h4>
+                        <!-- <div class="col-md-6">
+                            <h4 class="mb-3">Tanzania</h4>
                             <p class="mb-1"><strong>Address:</strong> Beijing, China</p>
-                        </div>
+                        </div> -->
 
                         <!-- Sustainability -->
                         <div class="col-md-12">
